--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-filter": "~3.0.1",
     "gulp-flatten": "~0.2.0",
     "gulp-inject": "~3.0.0",
+    "gulp-inject-string": "^1.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-load-plugins": "~0.10.0",
     "gulp-minify-css": "~1.2.1",
@@ -38,6 +39,7 @@
     "gulp-uglify": "~1.4.1",
     "gulp-useref": "~1.3.0",
     "gulp-util": "~3.0.6",
+    "gulp-wait": "0.0.2",
     "gulp-war": "^0.1.4",
     "http-proxy-middleware": "~0.9.0",
     "jshint": "^2.9.3",
