--- a/bower.json
+++ b/bower.json
@@ -12,13 +12,15 @@
     "angular-sanitize": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "angular-cookies": "^1.5.8",
-    "bootstrap-css": "^3.3.6"
+    "bootstrap-css": "^3.3.6",
+    "rateYo": "rateyo#^2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
   },
   "resolutions": {
     "jquery": "~2.1.4",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "raty": "^2.7.1"
   }
 }
